# kaesi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
.agents/skills/harness/: SKILL.md
.agents/skills/harness/agents/: openai.yaml
.agents/skills/harness/refs/: local-review.md  visual-display.md  writing-plan.md
.agents/skills/harness/scripts/: review-wait.mjs
.agents/skills/receiving-code-review/: SKILL.md
.agents/skills/systematic-debugging/: CREATION-LOG.md  SKILL.md
.agents/skills/tdd/: SKILL.md
.codex/: hooks.json
.github/: pr-review-comment.md
.github/PULL_REQUEST_TEMPLATE/: implementation.md  research.md
.oh-my-harness/: tree.md
.oh-my-harness/hooks/: tree.mjs
docs/harness/plans/: 2026-07-08-spec-and-init-plan.md
docs/prs/: 20260708-2330-kaesi_scope_and_roadmap.md
docs/specs/: agent-workflow.md  review-guidelines.md
src/kaesi/: __init__.py  cli.py
src/kaesi/maa/: __init__.py  facade.py
src/kaesi/tasks/: __init__.py  registry.py
tests/: conftest.py
tests/fixtures/: fake_maafw.py
tests/unit/: test_cli.py  test_facade.py  test_registry.py
